--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,7 +45,7 @@ nav {
     align-items: center;
     justify-content: center;
     background-color: #3498db; 
-    padding: 10x;
+    padding: 10px;
 }
 
 nav a {
